--- a/composer.json
+++ b/composer.json
@@ -1,46 +1,46 @@
 {
-  "name": "georgringer/page_speed",
-  "type": "typo3-cms-extension",
-  "description": "Performance & Usability are important to any site. Check every page for it and know how the site can be improved.",
-  "keywords": [
-    "TYPO3",
-    "extension",
-    "google",
-    "speed",
-    "mobile",
-    "performance"
-  ],
-  "homepage": "http://ringer.it",
-  "license": [
-    "GPL-2.0+"
-  ],
-  "require": {
-    "typo3/cms-core": ">=8.1.0,<8.9.99"
-  },
-  "autoload": {
-    "psr-4": {
-      "GeorgRinger\\PageSpeed\\": "Classes"
-    }
-  },
-  "replace": {
-    "page_speed": "self.version",
-    "typo3-ter/page-speed": "self.version"
-  },
-  "config": {
-    "vendor-dir": ".Build/vendor",
-    "bin-dir": ".Build/bin"
-  },
-  "scripts": {
-    "post-autoload-dump": [
-      "mkdir -p .Build/Web/typo3conf/ext/",
-      "[ -L .Build/Web/typo3conf/ext/page_speed ] || ln -snvf ../../../../. .Build/Web/typo3conf/ext/page_speed"
-    ]
-  },
-  "extra": {
-    "typo3/cms": {
-      "cms-package-dir": "{$vendor-dir}/typo3/cms",
-      "web-dir": ".Build/Web"
-    }
-  }
+	"name": "georgringer/page_speed",
+	"type": "typo3-cms-extension",
+	"description": "Performance & Usability are important to any site. Check every page for it and know how the site can be improved.",
+	"keywords": [
+		"TYPO3",
+		"extension",
+		"google",
+		"speed",
+		"mobile",
+		"performance"
+	],
+	"homepage": "http://ringer.it",
+	"license": [
+		"GPL-2.0+"
+	],
+	"require": {
+		"typo3/cms-core": "^9.4"
+	},
+	"autoload": {
+		"psr-4": {
+			"GeorgRinger\\PageSpeed\\": "Classes"
+		}
+	},
+	"replace": {
+		"page_speed": "self.version",
+		"typo3-ter/page-speed": "self.version"
+	},
+	"config": {
+		"vendor-dir": ".Build/vendor",
+		"bin-dir": ".Build/bin"
+	},
+	"scripts": {
+		"post-autoload-dump": [
+			"mkdir -p .Build/Web/typo3conf/ext/",
+			"[ -L .Build/Web/typo3conf/ext/page_speed ] || ln -snvf ../../../../. .Build/Web/typo3conf/ext/page_speed"
+		]
+	},
+	"extra": {
+		"typo3/cms": {
+			"cms-package-dir": "{$vendor-dir}/typo3/cms",
+			"web-dir": ".Build/Web"
+		}
+	}
 }
 
